# social-experiment-automation

./: .env.example  .gitignore  README.md  instagram-bot-repo-creation-script.sh  pyproject.toml  requirements.txt
bot/: bot.py  config_manager.py  database_client.py  event_system.py  main.py  notification_service.py  openai_client.py  real_time_updates.py  response_generator.py  smtp_client.py  user_preferences.py  user_profile.py
bot/crawler/: instapy.py
bot/social_media/: base.py  facebook_api.py  instagram_api.py  instapy.py  social_media_base.py  twitter.py
tables/: captions.sql  user_preferences.sql  users.sql
tests/: test_instagram_api_integration.py  test_openai_api_client.py  test_response_generator.py  test_social_bot.py
tests/data/: input_captions.json
tests/integration/: integration_test_social_bot.py
tests/unit/: test_instagram_api_integration.py  test_openai_api_client.py  test_response_generator.py  test_social_bot.py
