[tool.poetry]
name = "cyberpunk042-instagram-bot"
version = "0.1.0"
description = "A bot for Instagram interaction and response generation using OpenAI's GPT model."
authors = ["Cyberpunk042 <admin@cyberpunk042.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
openai = "^1.40.3"
supabase = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
